--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </div>
 
       <!-- Free and Popular Program -->
-      <div id="freepop">
+<!--       <div id="freepop">
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner rowr">
             <div class="carousel-item active" data-bs-interval="1000">
@@ -231,7 +231,7 @@ $('.autoplay').slick({
   }
 		
       </script>
-    
+     -->
     </main>
   </body>
 </html>
